Working version of pushing files to studies when starting
