# services/api-server/src/simcore_service_api_server/api/routes/studies_jobs.py
@@ -22,7 +22,7 @@ from ...services.solver_job_models_converters import create_jobstatus_from_task
 from ...services.study_job_models_converters import (
     create_job_from_study,
     create_job_outputs_from_project_outputs,
-    get_project_inputs_from_job_inputs,
+    get_project_and_file_inputs_from_job_inputs,
 )
 from ...services.webserver import AuthSession, ProjectNotFoundError
 from ..dependencies.authentication import get_current_user_id
@@ -74,11 +74,32 @@ async def create_study_job(
         project = await webserver_api.clone_project(project_id=study_id)
         project_inputs = await webserver_api.get_project_inputs(project_id=project.uuid)
 
-        new_project_inputs = get_project_inputs_from_job_inputs(
-            project_inputs, job_inputs
+        file_param_nodes = {}
+        for node_id, node in project.workbench.items():
+            if (
+                node.key == "simcore/services/frontend/file-picker"
+                and len(node.outputs) == 0
+            ):
+                file_param_nodes[node.label] = node_id
+
+        file_inputs = {}
+
+        (
+            new_project_inputs,
+            new_project_file_inputs,
+        ) = get_project_and_file_inputs_from_job_inputs(
+            project_inputs, file_inputs, job_inputs
         )
 
-        await webserver_api.update_project_inputs(project.uuid, new_project_inputs)
+        for node_label, file_link in new_project_file_inputs.items():
+            node_id = file_param_nodes[node_label]
+
+            await webserver_api.update_node_outputs(
+                project.uuid, node_id, {"outputs": {"outFile": file_link}}
+            )
+
+        if len(new_project_inputs) > 0:
+            await webserver_api.update_project_inputs(project.uuid, new_project_inputs)
 
         job = create_job_from_study(
             study_key=study_id, project=project, job_inputs=job_inputs
@@ -114,7 +135,7 @@ async def get_study_job(
     responses={status.HTTP_404_NOT_FOUND: {"model": ErrorGet}},
     include_in_schema=API_SERVER_DEV_FEATURES_ENABLED,
 )
-async def delete_studies_job(
+async def delete_study_job(
     study_id: StudyID,
     job_id: JobID,
     webserver_api: Annotated[AuthSession, Depends(get_webserver_session)],
